--- a/and-bible/app/src/main/res/values-be/strings.xml
+++ b/and-bible/app/src/main/res/values-be/strings.xml
@@ -170,6 +170,7 @@
   <string name="share_verse">Падзяліцца ...</string>
   <string name="share_verse_subject">Верш з Бібліі быў распаўсюджаны з дапамогаю And Bible</string>
   <string name="compare_translations">Параўнаць пераклады</string>
+  <!--Link context menu-->
   <!--Bookmarks-->
   <string name="bookmarks">Закладкі</string>
   <string name="add_bookmark">Дадаць закладку</string>
