--- a/and-bible/app/src/main/res/values-lv/strings.xml
+++ b/and-bible/app/src/main/res/values-lv/strings.xml
@@ -153,6 +153,7 @@
   <string name="share_verse">Dalīties …</string>
   <string name="share_verse_subject">Šo Bībeles pants Jums nosūtīts izmantojot And Bible</string>
   <string name="compare_translations">Salīdzināt tulkojumus</string>
+  <!--Link context menu-->
   <!--Bookmarks-->
   <string name="bookmarks">Grāmatzīmes</string>
   <string name="add_bookmark">Pievienot grāmatzīmi</string>
