--- a/and-bible/app/src/main/res/values-vi/strings.xml
+++ b/and-bible/app/src/main/res/values-vi/strings.xml
@@ -131,6 +131,7 @@
   <string name="share_verse">Chia sẻ …</string>
   <string name="share_verse_subject">Một câu Kinh Thánh đã được chia sẻ với bạn đang sử dụng And Bible</string>
   <string name="compare_translations">So sánh các bản dịch</string>
+  <!--Link context menu-->
   <!--Bookmarks-->
   <string name="bookmarks">Đánh dấu</string>
   <string name="add_bookmark">Thêm đánh dấu</string>
