--- a/and-bible/app/src/main/res/values-hu/strings.xml
+++ b/and-bible/app/src/main/res/values-hu/strings.xml
@@ -174,6 +174,7 @@
   <string name="share_verse">Megosztás…</string>
   <string name="share_verse_subject">Megosztottak veled egy bibliaverset az And Bible programmal</string>
   <string name="compare_translations">Fordítások összehasonlítása</string>
+  <!--Link context menu-->
   <!--Bookmarks-->
   <string name="bookmarks">Könyvjelzők</string>
   <string name="add_bookmark">Könyvjelző hozzáadása</string>
