--- a/and-bible/app/src/main/res/values-ml/strings.xml
+++ b/and-bible/app/src/main/res/values-ml/strings.xml
@@ -152,6 +152,7 @@
   <string name="share_verse">പങ്കിടുക</string>
   <string name="share_verse_subject">And Bible ഉപയ്യോഗിച്ചാണു ഈ വേദവാക്യം നിങ്ങളുമായി പങ്കുവെച്ചതു</string>
   <string name="compare_translations">പരിഭാഷ താരതമ്യം ചെയ്യുക</string>
+  <!--Link context menu-->
   <!--Bookmarks-->
   <string name="bookmarks">പുസ്തകസൂചിക</string>
   <string name="add_bookmark">പുസ്തകസൂചിക ചേർക്കക</string>
